assets/css/app-dark.css
body.dark-mode {
  background-color: var(--black);
  color: var(--white);
}
body.dark-mode a {
  color: var(--white);
}

body.dark-mode code {
  background-color: var(--gray-dark);
}

body.dark-mode header,
body.dark-mode button {
  color: var(--white);
}

body.dark-mode button.help {
  background-color: var(--black);
  border: 1px solid var(--white);
}

body.dark-mode header {
  background-color: var(--black);
}

body.dark-mode header .menu-left #nav-overlay #nav-content {
  background-color: var(--black);
}
body.dark-mode header .menu-left #nav-overlay #nav-content a {
  color: var(--white);
}
body.dark-mode
  header
  .menu-left
  #nav-overlay
  #nav-content
  .container
  .nav-list
  a:hover {
  background-color: var(--base-color);
}

body.dark-mode main {
  background-color: var(--gray-dark2);
}

body.dark-mode section#game {
  background-color: var(--black);
}

body.dark-mode section#game #mode-container .setting-row a {
  color: var(--white);
}

body.dark-mode section#game #mode-container #daily-details {
  color: var(--white);
}

body.dark-mode section#game #cards-container,
body.dark-mode section#game #cards-container #user-cards {
  background-color: var(--gray-dark);
}

body.dark-mode section#game #cards-container #tableau .card,
body.dark-mode section#game #cards-container #base .card {
  background-color: var(--black);
  border: 1px solid var(--off-white);
}
body.dark-mode section#game #cards-container #tableau .card[data-suit='0'],
body.dark-mode section#game #cards-container #base .card[data-suit='0'],
body.dark-mode section#game #cards-container #tableau .card[data-suit='3'],
body.dark-mode section#game #cards-container #base .card[data-suit='3'] {
  color: var(--off-white);
}
body.dark-mode section#game #cards-container #tableau .card[data-suit='1'],
body.dark-mode section#game #cards-container #base .card[data-suit='1'],
body.dark-mode section#game #cards-container #tableau .card[data-suit='2'],
body.dark-mode section#game #cards-container #base .card[data-suit='2'] {
  color: #ff8080;
}

body.dark-mode section#game #cards-container .card {
  box-shadow: 2px 2px 1px #aaa;
}

body.dark-mode section#game #keyboard-container button {
  background-color: var(--black);
  border: 1px solid var(--white);
  color: var(--white);
}

body.dark-mode section#game #keyboard-container .row:last-of-type button {
  background-color: var(--black-light);
  border: 1px solid var(--gray);
  color: var(--white);
}
@media (hover: hover) {
  body.dark-mode section#game #keyboard-container .row:last-of-type button:hover {
    background-color: var(--gray-dark);
    border: 1px solid var(--black);
    color: var(--white);
  }
}
body.dark-mode
  section#game
  #keyboard-container
  .row:last-of-type
  button:disabled {
  background-color: var(--gray-dark);
  border: 1px solid var(--gray-medium);
  color: var(--gray-medium);
}
body.dark-mode
  section#game
  #keyboard-container
  .row.sub
  button:hover:not([disabled]) {
  background-color: var(--gray-dark2);
  border: none;
  color: var(--white);
}

body.dark-mode #settings .setting-row .text .description {
  color: var(--gray);
}

body.dark-mode .switch {
  background-color: var(--gray-dark);
}
body.dark-mode .switch[data-status="true"] {
  background-color: var(--base-color);
}

body.dark-mode .modal-window {
  background-color: var(--black);
}
body.dark-mode .modal-dialog.temp .modal-window {
  background-color: var(--black);
  border-color: var(--white);
  color: var(--white);
}
body.dark-mode .modal-text {
  background-color: var(--black);
  color: var(--white);
}
body.dark-mode .modal-text ul li span.solution-category + ul {
  background-color: var(--marker-color);
  color: var(--white);
}
body.dark-mode .modal-button-group {
  background-color: var(--black);
}

